--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "pattern-wallet-generator",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Ethereum pattern wallet generator",
   "main": "index.js",
   "scripts": {
-    "test": "node test/script.js"
+    "test": "node test/script.js",
+    "publish": "npm publish --access public"
   },
   "repository": {
     "type": "git",
