--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
   "homepage": "https://github.com/YannSuissa/pattern-wallet-generator#readme",
   "dependencies": {
     "crypto": "^1.0.1",
-    "ethereum-checksum-address": "^0.0.8",
     "ethers": "^6.1.0",
-    "keccak": "^3.0.3",
+    "js-sha3": "^0.8.0",
     "secp256k1": "^5.0.0"
   }
 }
